RESOLVED FIXED182299
CrashTracer: com.apple.WebKit.WebContent at WebCore: WebCore::Document::updateStyleIfNeeded
https://bugs.webkit.org/show_bug.cgi?id=182299
Summary CrashTracer: com.apple.WebKit.WebContent at WebCore: WebCore::Document::updat...
Dean Jackson
Reported 2018-01-30 11:12:18 PST
CrashTracer: com.apple.WebKit.WebContent at WebCore: WebCore::Document::updateStyleIfNeeded
Attachments
Patch (9.29 KB, patch)
2018-01-30 11:15 PST, Dean Jackson
simon.fraser: review+
Dean Jackson
Comment 1 2018-01-30 11:12:50 PST
Dean Jackson
Comment 2 2018-01-30 11:15:27 PST
Simon Fraser (smfr)
Comment 3 2018-01-30 11:19:59 PST
Comment on attachment 332670 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=332670&action=review > Source/WebCore/svg/graphics/SVGImage.h:63 > + void enqueueStartAnimation(); This isn't really an enqueue (there is no queue); I'd call it scheduleStartAnimation() > LayoutTests/svg/animated-svgImage-scroll.html:37 > + expander.style.height = "1px"; > + if (window.testRunner) { > + setTimeout(function () { > + testRunner.notifyDone(); > + }, 50); > + } > + }, 20); These timeouts could probably be both 0, no?
Dean Jackson
Comment 4 2018-01-30 11:46:57 PST
Note You need to log in before you can comment on or make changes to this bug.